--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config example/build/webpack.config.js",
+    "dev": "webpack-dev-server --inline --progress --config example/build/webpack.config.js",
+    "build": "webpack --config example/build/webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,9 @@
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "portfinder": "^1.0.20",
+    "lodash": "^4.17.3"
   }
 }
